--- a/templates/admin.html
+++ b/templates/admin.html
@@ -13,10 +13,6 @@
 				<td><input type="password" name="password" id="password"></td>
 			</tr>
 			<tr>
-				<td>Lokal administrator:</td>
-				<td><input type="checkbox" name="local_admin" id="local_admin"></td>
-			</tr>
-			<tr>
 				<td>System-administrator:</td>
 				<td><input type="checkbox" name="system_admin" id="system_admin"></td>
 			</tr>
@@ -34,7 +30,6 @@
 			<thead>
 				<tr>
 					<th>Brukernavn</th>
-					<th>Lokal admin</th>
 					<th>Administrator</th>
 					<th></th>
 				</tr>
@@ -43,7 +38,6 @@
 				{% for user in users %}
 					<tr>
 						<td>{{ user.username }}</td>
-						<td>{{ "Ja" if user.local_admin else "Nei" }}</td>
 						<td>{{ "Ja" if user.system_admin else "Nei" }}</td>
 						<td>
 							<button class="btn btn-danger btn-xs del-btn" name="{{ user.username }}">Slett</button>
@@ -64,7 +58,6 @@
 				username: $("#username").val(),
 				password: $("#password").val(),
 				system_admin: $("#system_admin").is(":checked"),
-				local_admin: $("#local_admin").is(":checked")
 			}
 			$.ajax({
 				type: "POST",
@@ -74,7 +67,7 @@
 				success: function(result) {
 					if (result["success"]){
 						show_message("Brukeren " + $("#username").val() + " ble laget.");
-						$("#user-body").append("<tr><td>" + data.username + "</td><td>" + (data.local_admin ?"Ja": "Nei") + "</td><td>" + (data.system_admin ? "Ja": "Nei") + "</td><td><button class='btn btn-danger btn-xs del-btn'>Slett</button></td></tr>");
+						$("#user-body").append("<tr><td>" + data.username + "</td><td>"+(data.system_admin ? "Ja": "Nei") + "</td><td><button class='btn btn-danger btn-xs del-btn'>Slett</button></td></tr>");
 					}
 					else if (result["msg"])
 						show_message(result["msg"]);
