--- a/templates/group_table.html
+++ b/templates/group_table.html
@@ -4,17 +4,33 @@
 
 {% block body %}
 
-	{% if session.username == owner or relations[session.username].add_points %}
-	<form action="{{ url_for('add_new_beer_group', group_id=group_id) }}">
-		<input type="submit" class="btn btn-default btn-xs" value="Legg til element">
-	</form>
+
+	<ul class="list-inline">
+
+	{% if session.username == owner or relations.del_element %}
+		<li>
+			<form action="{{ url_for('add_new_beer_group', group_id=group_id) }}">
+				<input type="submit" class="btn btn-default btn-xs" value="Legg til element">
+			</form>
+		</li>
 	{% endif %}
 
-	{% if session.username == owner or relations[session.username].del_types %}
-		<form action="{{ url_for('types_handler_group', group_id=group_id) }}">
-			<input type="submit" class="btn btn-default btn-xs" value="Endre typer">			
-		</form>
+	{% if session.username == owner or relations.types_handling %}
+		<li>
+			<form action="{{ url_for('types_handler_group', group_id=group_id) }}">
+				<input type="submit" class="btn btn-default btn-xs" value="Endre typer">			
+			</form>
+		</li>
 	{% endif %}
+
+	{% if session.username == owner %}
+		<li>
+			<form action="{{ url_for('show_group', group_id=group_id) }}">
+				<input type="submit" class="btn btn-default btn-xs" value="Administrer">
+			</form>
+		</li>
+	{% endif %}
+	</ul>
 
 	<table class="table">
 		<thead>
@@ -41,7 +57,7 @@
 								<input class="btn btn-info btn-xs" type="submit" value="Vis">
 							</form>
 						</li>
-						{% if session.local_admin %}
+						{% if session.username == owner or relations.del_element %}
 						<li>
 							<button class="btn btn-danger btn-xs del-btn" value="{{ url_for('delete_beer', beer_name=beer.name, beer_type=beer.type) }}">Slett</button>
 							<!-- <form action="{{ url_for('delete_beer', beer_name=beer.name, beer_type=beer.type) }}" method="POST">
@@ -49,9 +65,11 @@
 							</form> -->
 						</li>
 						{% endif %}
+						{% if session.username == owner or relations.add_points %}
 						<li>
 							<button class="btn btn-success btn-xs point-btn">Legg til poeng</button>
 						</li>
+						{% endif %}
 					</ul>
 				</td>
 			</tr>
@@ -95,7 +113,7 @@
 			var beer = {
 				beer_name: siblings[1].innerText,
 				beer_type: siblings[2].innerText,
-				points: $("#points").val()
+				points: parseInt($("#points").val())
 			};
 			if (beer["points"] > 100 || beer["points"] < 0 || beer["points"] % 1 !== 0){
 				show_message("Ugyldige poengverdier. Må være mellom 0-100 og være et heltall.");
@@ -104,11 +122,11 @@
 			}
 			$.ajax({
 				type: "POST",
-				url: "{{ url_for('add_score') }}",
+				url: "{{ url_for('add_score', group_id=group_id) }}",
 				data: JSON.stringify(beer),
 				contentType: 'application/json;charset=UTF-8',
 				success: function(result) {
-					if (result === "true"){
+					if (result["success"]){
 						show_message("Poeng ble gitt til " + beer["beer_name"] + " " + beer["beer_type"] + ".");
 					}else
 						show_message("Poengene ble ikke lagret");
