--- a/templates/home3.html
+++ b/templates/home3.html
@@ -6,8 +6,55 @@
 
 	<p>Her kan du velge å ha en favorittgruppe som åpnes her når du starter nettsiden.</p>
 
+	<table class="table">
+		<tr>
+			<td>Velg favorittgruppe:</td>
+			<td>
+				<div class="form-group">
+					<select class="form-control" id="gr">
+						<option value="-1"></option>
+						{% for group in groups %}
+							<option value="{{group.group_id}}">
+								{{group.name}}
+								{{group.owner}}
+							</option>
+						{% endfor %}
+					</select>
+				</div>
+			</td>
+		</tr>
+		<tr>
+			<td></td>
+			<td>
+				<button class="btn btn-default" id="save">Lagre</button>				
+			</td>
+		</tr>
+	</table>
+
 {% endblock %}
 
 {% block scripts %}
+
+	<script type="text/javascript">
+
+	$("#save").click(function(){
+		var favorite = parseInt($("#gr").val());
+		$.ajax({
+			type: "POST",
+			url: "{{ url_for('set_favorite') }}",
+			data: JSON.stringify({group_id: favorite}),
+			contentType: 'application/json;charset=UTF-8',
+			success: function(res) {
+				if (res.success){
+					show_message("Gruppen ble lagret.");
+				}
+				if (res.msg){
+					show_message(res.msg);
+				}
+			}
+		});
+	});
+
+	</script>
 
 {% endblock %}
